Apply suggestions from code review
Co-authored-by: Adam Ogieniewski <ogieniewski.dev@gmail.com>